# dynarr

./: CMakeLists.txt  README.md
cmake/: dynarrConfig.cmake.in
include/: dynarr.h
src/: dynarr.c
tests/: dumb.c
